--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="cont">
                         <i class="fa fa-globe"></i>
                         <a href=" https://bhumikarags.github.io/Introductory-website/">
-                            <p>visit portfolio.website</p>
+                            <p>https://bhumikarags.github.io/Introductory-website/</p>
                         </a>
                     </div>
 
@@ -159,7 +159,7 @@
                          <li> It showcases an 
                              enticing menu that promises a symphony of flavors but 
                              also ensures easy access to crucial contact details.</li>
-                          <li> <a href="https://bhumikarags.github.io/Foodie/">Visit website</a></li>       
+                          <li> <a href="https://bhumikarags.github.io/Foodie/">https://bhumikarags.github.io/Foodie/</a></li>       
                      </ul>
                    </div>
 
@@ -189,7 +189,7 @@
                                experience as data flows effortlessly through props. By harnessing the flexibility 
                                of useContext, we've centralized state management, enhancing code modularity 
                                and readability.</li>
-                          <li> <a href="https://bhumikarags.github.io/test-js/">Visit website</a></li>       
+                          <li> <a href="https://bhumikarags.github.io/test-js/">https://bhumikarags.github.io/test-js/</a></li>       
                      </ul>
                    </div>
 
