--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="cont">
                         <i class="fa fa-globe"></i>
                         <a href=" https://bhumikarags.github.io/Introductory-website/">
-                            <p>https://bhumikarags.github.io/Introductory-website/</p>
+                            <p class="small">https://bhumikarags.github.io/Introductory-website/</p>
                         </a>
                     </div>
 
